Fix issue with not showing note in AMK

--- a/public/stylesheets/main_style.css
+++ b/public/stylesheets/main_style.css
@@ -424,7 +424,7 @@ a.atc-code:hover {
     content: '↓';
 }
 
-.prescription-item-note {
+.prescription-item-comment {
     width: 100%;
     background: var(--background-color-gray);
     border: 0;
